--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/DetailObjectNotFound.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/DetailObjectNotFound.view.xml
@@ -5,8 +5,8 @@
 
 	<MessagePage
 		id="page"
-		title="{i18n>detailTitle}"
-		text="{i18n>noObjectFoundText}"
+		title="{i18n>ObjectNotFoundTitle}"
+		text="{i18n>ObjectNotFoundText}"
 		icon="{sap-icon://product}"
 		description=""
 		showNavButton="{device>/system/phone}"
