--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/NotFound.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/NotFound.view.xml
@@ -5,8 +5,8 @@
 
 	<MessagePage
 		id="page"
-		title="{i18n>notFoundTitle}"
-		text="{i18n>notFoundText}"
+		title="{i18n>NotFoundTitle}"
+		text="{i18n>NotFoundText}"
 		icon="{sap-icon://document}"
 		description=""
 		showNavButton="{device>/system/phone}"
