Added the new ApplicationManagementService and a test to create an entry for an EntitySet

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
@@ -18,6 +18,9 @@
 				</infoToolbar>
 			</List>
 		</semantic:content>
+		<semantic:addAction>
+			<semantic:AddAction press="onAddPressed"/>
+		</semantic:addAction>
 		<semantic:sort>
 			<semantic:SortAction press="onSortPressed"/>
 		</semantic:sort>
