--- a/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/view/BewerbungenMaster.view.xml
@@ -8,7 +8,7 @@
 		</semantic:subHeader>
 		<semantic:content>
 			<PullToRefresh id="pullToRefresh" visible="{device>/support/touch}" refresh="onRefresh"/>
-			<List id="listBewerbungen" class="listBewerbungen" items="{path: 'testModel>/Bewerbungs', parameters: {expand : 'BewerbungStelleDetails/StelleDetails,StatusDetails,BewerberDetails'}}"
+			<List id="listBewerbungen" class="listBewerbungen" items="{path: 'applmanModel>/Applications', parameters: {expand : 'Positions,StatusDetails,ApplicantDetails'}}"
 				busyIndicatorDelay="{masterView>/delay}" noDataText="{masterView>/noDataText}" updateFinished="onUpdateFinished">
 				<core:Fragment fragmentName="de.fis.bewerbungverwaltung.view.fragment.BewerbungListItem" type="XML"/>
 				<infoToolbar>
@@ -18,9 +18,6 @@
 				</infoToolbar>
 			</List>
 		</semantic:content>
-		<semantic:addAction>
-			<semantic:AddAction press="onAddPressed"/>
-		</semantic:addAction>
 		<semantic:sort>
 			<semantic:SortAction press="onSortPressed"/>
 		</semantic:sort>
