Fixed building the URI for requesting the Applicants Picture

--- a/webapp/view/BewerbungDetail.view.xml
+++ b/webapp/view/BewerbungDetail.view.xml
@@ -7,7 +7,7 @@
 			editHeaderButtonPress="handleEditBtnPress">
 			<uxap:headerTitle>
 				<uxap:ObjectPageHeader
-					objectImageURI="https://applmanserverp1942281469trial.hanatrial.ondemand.com/applman/picture/{applmanModel>ApplicationId}/{applmanModel>ApplicantDetails/Picture}"
+					objectImageURI="{path: 'applmanModel>ApplicationId', formatter: '.formatter.formatImageURI'}"
 					objectTitle="{applmanModel>ApplicantDetails/Firstname} {applmanModel>ApplicantDetails/Lastname}" objectImageShape="Circle"
 					objectImageAlt="{applmanModel>ApplicantDetails/Firstname} {applmanModel>ApplicantDetails/Lastname}"
 					objectSubtitle="{applmanModel>ApplicantDetails/Zipcode} {applmanModel>ApplicantDetails/City}" isObjectIconAlwaysVisible="false"
