--- a/webapp/view/BewerbungenMaster.view.xml
+++ b/webapp/view/BewerbungenMaster.view.xml
@@ -8,7 +8,7 @@
 		</semantic:subHeader>
 		<semantic:content>
 			<PullToRefresh id="pullToRefresh" visible="{device>/support/touch}" refresh="onRefresh"/>
-			<List id="listBewerbungen" class="listBewerbungen" items="{path: 'applmanModel>/Applications', parameters: {expand : 'Positions,StatusDetails,ApplicantDetails'}}"
+			<List id="listBewerbungen" class="listBewerbungen" items="{path: 'applmanModel>/Applications', parameters: {expand : 'Positions,Sources,StatusDetails,ApplicantDetails'}}"
 				busyIndicatorDelay="{masterView>/delay}" noDataText="{masterView>/noDataText}" updateFinished="onUpdateFinished">
 				<core:Fragment fragmentName="de.fis.bewerbungverwaltung.view.fragment.BewerbungListItem" type="XML"/>
 				<infoToolbar>
